--- a/css/styles.css
+++ b/css/styles.css
@@ -1,374 +1,1 @@
-@charset "UTF-8";
-/* line 1, ../../../Desktop/terceraEntrega/scss/partials/_reset.scss */
-body {
-  font-family: "Roboto", sans-serif !important;
-  overflow-x: hidden !important;
-  box-sizing: border-box;
-  background-color: #fff;
-  width: 100% !important;
-  float: left !important; }
-
-/* line 2, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-.carousel-inner {
-  height: 650px; }
-  /* line 5, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-  .carousel-inner img {
-    height: 650px;
-    object-fit: cover;
-    object-position: 50% 50%; }
-
-/* line 12, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-#iconmont {
-  width: 55px;
-  height: 55px; }
-
-/* line 19, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-nav li a {
-  padding-left: 12px !important;
-  padding-right: 12px !important; }
-  /* line 24, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-  nav li a:hover {
-    font-size: 18px;
-    font-weight: 600; }
-
-/* line 32, ../../../Desktop/terceraEntrega/scss/partials/_header.scss */
-label {
-  font-weight: 600; }
-
-/* line 2, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#carrouselCard {
-  height: 400px; }
-  /* line 5, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  #carrouselCard img {
-    height: 400px;
-    object-fit: cover; }
-
-/* line 10, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-h1, h2, h3, h4, h5 {
-  font-family: 'Cormorant Garamond', serif; }
-
-/* line 13, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-button {
-  font-family: "Roboto", sans-serif; }
-
-/* line 16, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#btnunits {
-  width: 100%;
-  display: flex;
-  justify-content: center; }
-  /* line 20, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  #btnunits .btn {
-    width: 80%;
-    height: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 20px;
-    margin-bottom: 20px;
-    color: white;
-    background-color: #6c757d; }
-    /* line 31, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-    #btnunits .btn:hover {
-      color: #6c757d;
-      background-color: white;
-      border-color: #6c757d; }
-
-/* line 39, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.pm {
-  width: 80%;
-  margin: auto;
-  font-size: 18px;
-  font-weight: 600;
-  color: gray; }
-
-/* line 47, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#cardEx {
-  height: 400px;
-  object-fit: cover;
-  object-position: 50% 50%; }
-
-/* line 53, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#h4 {
-  width: 90%;
-  text-align: center;
-  align-items: center;
-  margin-left: 5%; }
-
-/* line 59, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#h5 {
-  width: 90%;
-  text-align: center;
-  align-items: center;
-  margin-left: 5%; }
-
-/* line 66, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#card {
-  transition: all 0.5s; }
-  /* line 69, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  #card .card-title {
-    font-weight: 600; }
-  /* line 73, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  #card:hover {
-    transform: scale(1.05);
-    z-index: 1; }
-
-/* line 79, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-#ubiTitle {
-  font-weight: 600; }
-
-/* ----------  HTML UNITS ------- */
-/* line 86, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.breadcrumb {
-  margin-left: 30px; }
-
-/* line 90, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.card .card-title, .card .card-header {
-  font-weight: 600; }
-
-/* line 95, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.carrousel2 {
-  height: 300px; }
-  /* line 97, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  .carrousel2 img {
-    height: 300px; }
-
-/* ------------------ HTMLS CABAÑAS ---------------------*/
-/* line 104, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.abs {
-  position: absolute;
-  top: 15%;
-  left: 5%;
-  color: #fff;
-  font-weight: 600;
-  font-size: 45px;
-  font-family: 'Roboto', sans-serif; }
-  /* line 112, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  .abs h2 {
-    font-size: 25px; }
-
-/* line 117, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.icons h2 {
-  color: gray;
-  font-size: 25px; }
-
-/* line 121, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.icons h3 {
-  color: gray;
-  font-size: 20px !important; }
-
-/* line 126, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.info {
-  font-size: 30px !important;
-  color: #333333;
-  font-weight: 600; }
-
-/* line 132, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-h2 {
-  font-size: 36px;
-  font-weight: 300; }
-
-/* line 136, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-h3 {
-  color: gray;
-  font-size: 22px !important;
-  font-weight: 600 !important; }
-
-/* line 141, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.infor {
-  display: flex;
-  flex-direction: row;
-  text-align: left;
-  align-items: center; }
-  /* line 146, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  .infor p {
-    margin: 0;
-    padding-left: 20px; }
-
-/* line 152, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.services {
-  display: flex;
-  flex-direction: column;
-  margin-left: 10%; }
-
-/*----------HTML ACTIVITIES--------*/
-/* line 159, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-.max {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  overflow-x: hidden; }
-  /* line 165, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-  .max .contenedor {
-    background-color: aqua;
-    width: 350px;
-    height: 500px;
-    border-radius: 10px;
-    margin-bottom: 20px; }
-    /* line 171, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-    .max .contenedor img {
-      width: 350px;
-      height: 450px;
-      object-fit: cover;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px; }
-    /* line 178, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-    .max .contenedor h2 {
-      font-family: "Roboto", sans-serif;
-      font-size: 26px;
-      font-weight: 600;
-      margin-top: 5px; }
-    /* line 184, ../../../Desktop/terceraEntrega/scss/partials/_main.scss */
-    .max .contenedor .modal {
-      top: 20% !important; }
-
-@media (max-width: 1024px) {
-  /* line 49, ../../../Desktop/terceraEntrega/scss/partials/_animations.scss */
-  [data-aos='fade-up'] {
-    transform: none !important; }
-  /* line 52, ../../../Desktop/terceraEntrega/scss/partials/_animations.scss */
-  [data-aos='fade-right'] {
-    transform: none !important; }
-  /* line 55, ../../../Desktop/terceraEntrega/scss/partials/_animations.scss */
-  [data-aos='fade-left'] {
-    transform: none !important; }
-  /* line 58, ../../../Desktop/terceraEntrega/scss/partials/_animations.scss */
-  .slide-in-blurred-right {
-    animation: none !important; } }
-
-/*-------MEDIAQUERIES PERS.------*/
-@media (min-width: 767px) {
-  /*-------INDEX-------*/
-  /*-------HTML CABAÑAS + BUNGALOWS + CASAS*/
-  /* line 10, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .icons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around; }
-  /* line 15, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .services {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-left: 5%; } }
-
-@media (min-width: 1023px) {
-  /* line 31, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #carousel-inner {
-    height: 80vh; }
-  /* line 34, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #carousel-inner img {
-    height: 80vh;
-    object-fit: cover !important;
-    object-position: 50% 50%; }
-  /* line 40, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #carrouselCard {
-    object-fit: cover; }
-  /* line 44, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #h22 {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important; }
-  /* line 48, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #h2ex {
-    padding-top: 100px !important; }
-  /* line 51, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #h4 {
-    width: 70%;
-    text-align: center;
-    align-items: center;
-    margin-left: 15%;
-    padding-bottom: 100px; }
-  /* line 58, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #iframe {
-    height: 630px !important; }
-  /* line 61, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #iframe iframe {
-    height: 600px !important; }
-  /* line 64, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #bodyCard p {
-    padding: 55px; }
-  /* line 67, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #bodyCard h5 {
-    margin-top: 45px; }
-  /* line 70, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #cardEx {
-    height: 600px; }
-  /* line 73, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #iconsFt {
-    margin-top: 0 !important; }
-  /*HTML UNITS*/
-  /* line 79, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #carrouselCardis {
-    width: 650px;
-    margin-left: auto;
-    object-fit: cover; }
-  /* line 86, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  #carrouselCardis2 {
-    width: 650px;
-    margin-right: auto;
-    object-fit: cover; }
-  /* line 91, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .carrousel2 {
-    height: 600px; }
-    /* line 93, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-    .carrousel2 img {
-      height: 600px;
-      object-fit: cover; }
-  /* line 98, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .btn {
-    width: 50%; }
-  /*HTML CABNAHUEL*/
-  /* line 102, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .icons {
-    display: flex;
-    justify-content: space-around; }
-    /* line 105, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-    .icons img {
-      margin-bottom: 25px !important; }
-  /* line 109, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .p {
-    width: 80% !important;
-    text-align: center;
-    margin: auto; }
-  /* line 114, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .colum {
-    display: flex;
-    flex-direction: column; }
-  /* line 119, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .services {
-    display: flex !important;
-    flex-direction: row;
-    justify-content: space-evenly !important;
-    margin: 0 !important; }
-  /* line 125, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .infor {
-    display: flex;
-    align-items: center !important; }
-    /* line 128, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-    .infor p {
-      margin: 0;
-      padding-left: 20px;
-      width: 100%;
-      text-align: left; }
-  /*-------HTML ACTIVITIES------*/
-  /* line 138, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-  .max {
-    display: flex;
-    flex-direction: row;
-    margin: auto;
-    justify-content: space-evenly; }
-    /* line 143, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-    .max .contenedor {
-      width: 500px;
-      height: 650px; }
-      /* line 146, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-      .max .contenedor img {
-        width: 500px;
-        height: 550px; }
-      /* line 150, ../../../Desktop/terceraEntrega/scss/partials/_mediaqueries.scss */
-      .max .contenedor h2 {
-        font-size: 24px;
-        font-family: "Roboto", sans-serif; } }
-
-/*# sourceMappingURL=styles.css.map */
+body{font-family:"Roboto",sans-serif !important;overflow-x:hidden !important;box-sizing:border-box;background-color:#fff;width:100% !important;float:left !important}.carousel-inner{height:650px}.carousel-inner img{height:650px;object-fit:cover;object-position:50% 50%}#iconmont{width:55px;height:55px}nav li a{padding-left:12px !important;padding-right:12px !important}nav li a:hover{font-size:18px;font-weight:600}label{font-weight:600}#carrouselCard{height:400px}#carrouselCard img{height:400px;object-fit:cover}h1,h2,h3,h4,h5{font-family:'Cormorant Garamond', serif}button{font-family:"Roboto",sans-serif}#btnunits{width:100%;display:flex;justify-content:center}#btnunits .btn{width:80%;height:40px;display:flex;flex-direction:column;justify-content:center;font-family:"Roboto",sans-serif;font-size:20px;margin-bottom:20px;color:white;background-color:#6c757d}#btnunits .btn:hover{color:#6c757d;background-color:white;border-color:#6c757d}.pm{width:80%;margin:auto;font-size:18px;font-weight:600;color:gray}#cardEx{height:400px;object-fit:cover;object-position:50% 50%}#h4{width:90%;text-align:center;align-items:center;margin-left:5%}#h5{width:90%;text-align:center;align-items:center;margin-left:5%}#card{transition:all 0.5s}#card .card-title{font-weight:600}#card:hover{transform:scale(1.05);z-index:1}#ubiTitle{font-weight:600}.breadcrumb{margin-left:30px}.card .card-title,.card .card-header{font-weight:600}.carrousel2{height:300px}.carrousel2 img{height:300px}.abs{position:absolute;top:15%;left:5%;color:#fff;font-weight:600;font-size:45px;font-family:'Roboto', sans-serif}.abs h2{font-size:25px}.icons h2{color:gray;font-size:25px}.icons h3{color:gray;font-size:20px !important}.info{font-size:30px !important;color:#333;font-weight:600}h2{font-size:36px;font-weight:300}h3{color:gray;font-size:22px !important;font-weight:600 !important}.infor{display:flex;flex-direction:row;text-align:left;align-items:center}.infor p{margin:0;padding-left:20px}.services{display:flex;flex-direction:column;margin-left:10%}.max{display:flex;flex-direction:column;align-items:center;padding:0;overflow-x:hidden}.max .contenedor{background-color:#fcfcfc;width:350px;height:500px;border-radius:10px;margin-bottom:20px;position:relative}.max .contenedor img{width:350px;height:450px;object-fit:cover;border-top-left-radius:10px;border-top-right-radius:10px}.max .contenedor h2{font-family:"Roboto",sans-serif;font-size:26px;font-weight:600;position:absolute;bottom:12%;left:10px;color:white;text-shadow:1px 1px 2px black}.max .contenedor h3{bottom:20%;position:absolute;left:10px;color:white;font-family:"Roboto",sans-serif;text-shadow:1px 1px 2px black}.max .contenedor .modal .modal-body{padding-bottom:0}.max .contenedor .modal .modal-title{color:#111963;position:relative;font-size:20px !important;text-shadow:none}.max .contenedor .modal p{font-size:16px;font-weight:600;color:black;margin-bottom:15px}.max .contenedor .modal .divsModal{display:flex;flex-direction:row;justify-content:space-around}.max .contenedor .modal .divsModal .containModal{display:flex;flex-direction:column;align-items:center;margin-bottom:5px}.max .contenedor .modal .divsModal .containModal img{width:50px;height:50px;margin-bottom:10px}.max .contenedor .modal .divsModal .containModal #h3{font-size:18px !important;position:relative;bottom:0;left:0;color:gray;font-family:'Cormorant Garamond', serif;text-shadow:none;margin-bottom:0}.max .contenedor .modal .divsModal .containModal h4{font-size:16px;font-family:'Cormorant Garamond', serif;font-weight:600;color:gray}.max .contenedor button{width:auto;margin-top:5px}@media (max-width: 1024px){[data-aos='fade-up']{transform:none !important}[data-aos='fade-right']{transform:none !important}[data-aos='fade-left']{transform:none !important}.slide-in-blurred-right{animation:none !important}}@media (min-width: 767px){.icons{display:flex;flex-direction:row;justify-content:space-around}.services{display:flex;flex-direction:row;justify-content:center;margin-left:5%}.max{display:flex;flex-direction:row;justify-content:space-around;padding:0;overflow-x:hidden}.max .contenedor{background-color:lightgray;width:250px;height:380px;border-radius:10px;margin-bottom:20px;position:relative}.max .contenedor img{width:250px;height:330px;object-fit:cover;border-top-left-radius:10px;border-top-right-radius:10px}.max .contenedor h2{font-family:"Roboto",sans-serif;font-size:22px;font-weight:600;position:absolute;bottom:12%;left:10px;color:white;text-shadow:1px 1px 2px black}.max .contenedor h3{bottom:20%;position:absolute;left:10px;color:white;font-family:"Roboto",sans-serif;text-shadow:1px 1px 2px black;font-size:18px !important}.max .contenedor .modal{top:20% !important;--bs-modal-width: 720px}.max .contenedor button{width:auto;margin-top:5px}}@media (min-width: 1023px){#carousel-inner{height:80vh}#carousel-inner img{height:80vh;object-fit:cover !important;object-position:50% 50%}#carrouselCard{object-fit:cover}#h22{padding-top:50px !important;padding-bottom:50px !important}#h2ex{padding-top:100px !important}#h4{width:70%;text-align:center;align-items:center;margin-left:15%;padding-bottom:100px}#iframe{height:630px !important}#iframe iframe{height:600px !important}#bodyCard p{padding:55px}#bodyCard h5{margin-top:45px}#cardEx{height:600px}#iconsFt{margin-top:0 !important}#carrouselCardis{width:650px;margin-left:auto;object-fit:cover}#carrouselCardis2{width:650px;margin-right:auto;object-fit:cover}.carrousel2{height:600px}.carrousel2 img{height:600px;object-fit:cover}.btn{width:50%}.icons{display:flex;justify-content:space-around}.icons img{margin-bottom:25px !important}.p{width:80% !important;text-align:center;margin:auto}.colum{display:flex;flex-direction:column}.services{display:flex !important;flex-direction:row;justify-content:space-evenly !important;margin:0 !important}.infor{display:flex;align-items:center !important}.infor p{margin:0;padding-left:20px;width:100%;text-align:left}.max{display:flex;flex-direction:row;margin:auto;justify-content:space-evenly;max-width:100%}.max .contenedor{width:450px;height:560px;background-color:#f0f0f0}.max .contenedor img{width:450px;height:500px}.max .contenedor h2{position:absolute;bottom:12%;font-size:24px;font-family:"Roboto",sans-serif}.max .contenedor h3{bottom:18%;position:absolute;left:10px;color:white;font-family:"Roboto",sans-serif;text-shadow:1px 1px 2px black}.max .contenedor button{padding:4px !important;margin-top:10px !important}.max .contenedor .modal{top:15% !important;--bs-modal-width: 900px}.max .contenedor .modal .modal-title{margin-left:auto;font-size:22px !important}.max .contenedor .modal button{margin-right:10px}.max .contenedor .modal p{font-size:18px;margin-bottom:40px}.max .contenedor .modal .divsModal .containModal img{width:50px !important;height:50px !important}.max .contenedor .modal .divsModal .containModal #h3{font-size:22px !important}.max .contenedor .modal .divsModal .containModal h4{font-size:18px}.max .contenedor button{width:auto;margin-top:5px}}
