--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,8 @@
 $mainFont:"Roboto", sans-serif;
 $colorOne:#fff; 
 $mainWeight:600;
+$colorTwo:rgb(17,25,99);
+$colorThree: #808080;
 
                     //imports//
 
