--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -163,11 +163,13 @@ h3{
     padding: 0;
     overflow-x: hidden;
     .contenedor{
-        background-color: aqua;
+        background-color: rgb(252, 252, 252);
         width: 350px;
         height: 500px;
         border-radius: 10px;
         margin-bottom: 20px;
+        position: relative;
+
         img{
             width: 350px;
             height: 450px;
@@ -179,10 +181,75 @@ h3{
             font-family: $mainFont;
             font-size: 26px;
             font-weight: $mainWeight;
-            margin-top: 5px;
+            position: absolute;
+            bottom:12%;
+            left: 10px;
+            color: white;
+            text-shadow: 1px 1px 2px black
         }
+         h3{
+            bottom: 20%;
+            position: absolute;
+            left:10px;
+            color:white;
+            font-family: $mainFont;
+            text-shadow: 1px 1px 2px black
+         }
         .modal{
-            top: 20% !important;; 
+            
+            .modal-body{
+                padding-bottom: 0;
+            }
+            .modal-title{
+                color: rgb(17, 25, 99);
+                position: relative;
+                font-size:20px!important;
+                text-shadow: none;
+            }
+            p{
+                font-size: 16px;
+                font-weight: $mainWeight;
+                color: black;
+                margin-bottom: 15px;
+            }
+            .divsModal{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                .containModal{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin-bottom: 5px;
+                    img{
+                        width:50px;
+                        height: 50px;
+                        margin-bottom: 10px;
+                    }
+                    #h3{
+                        font-size: 18px!important;
+                        position: relative;
+                        bottom: 0;
+                        left:0;
+                        color: $colorThree;
+                        font-family: 'Cormorant Garamond', serif;
+                        text-shadow: none;
+                        margin-bottom: 0;
+                    }
+                    h4{
+                        font-size: 16px;
+                        font-family: 'Cormorant Garamond', serif;
+                        font-weight: $mainWeight;
+                        color: $colorThree;
+                    }
+                }
+            }
+         }
+         button{
+            width: auto;
+            margin-top: 5px;
          }
     }
 }
+
+
