--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -19,14 +19,67 @@
         margin-left: 5%
     }
         
+    /*------HTML EXCURSIONES------*/
+    .max{  
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 0;
+        overflow-x: hidden;
+        .contenedor{
+            background-color: lightgray;
+            width: 250px;
+            height: 380px;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            position: relative;
+    
+            img{
+                width: 250px;
+                height: 330px;
+                object-fit: cover;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+            }
+            h2{
+                font-family: $mainFont;
+                font-size: 22px;
+                font-weight: $mainWeight;
+                // margin-top: 5px;
+                position: absolute;
+                bottom:12%;
+                left: 10px;
+                color: white;
+                text-shadow: 1px 1px 2px black
+            }
+            h3{
+                bottom: 20%;
+                position: absolute;
+                left:10px;
+                color:white;
+                font-family: $mainFont;
+                text-shadow: 1px 1px 2px black;
+                font-size: 18px!important;
+                
+            }
+            .modal{
+                top: 20% !important;
+                --bs-modal-width: 720px;
+             }
+             button{
+                width: auto;
+                margin-top: 5px;
+             }
+        }
+    }
+
+
 }
-
-
 
 
 @media (min-width:1023px) {
 
-
+    
 
     #carousel-inner{
         height: 80vh;
@@ -139,23 +192,71 @@
         display: flex;
         flex-direction: row;
         margin: auto;
-        justify-content: space-evenly;
+        justify-content: space-evenly; 
+        max-width: 100%;
         .contenedor{
-            width: 500px;
-            height: 650px;
+            width: 450px;
+            height: 560px;
+            background-color: rgb(240, 240, 240);
             img{
-                width: 500px;
-                height: 550px;
+                width: 450px;
+                height: 500px;
             }
             h2{
+                position: absolute;
+                bottom:12%;
                 font-size: 24px;
                 font-family: $mainFont;
             }
-        }
+            h3{
+                bottom: 18%;
+                position: absolute;
+                left:10px;
+                color:white;
+                font-family: $mainFont;
+                text-shadow: 1px 1px 2px black
+            }
+            button{
+                padding: 4px!important;
+                margin-top: 10px!important;
+            }
+            .modal{
+                top: 15% !important;
+                --bs-modal-width: 900px;
+                .modal-title{
+                    margin-left: auto;
+                    font-size: 22px!important;
+                }
+                button{
+                    margin-right: 10px;
+                }
+
+                p{
+                    font-size: 18px;
+                    margin-bottom: 40px;
+                }
+
+                .divsModal{
+                    .containModal{
+                        img{
+                            width: 50px!important;
+                            height: 50px!important;
+                        }
+                        #h3{
+                            font-size: 22px!important;
+                        }
+                        h4{
+                            font-size: 18px;
+                        }
+                    }
+                }
+             }
+             button{
+                width: auto;
+                margin-top: 5px;
+            }
         
+        }      
     }
-
-
-
 
 }
