--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -4,7 +4,7 @@
 @media (min-width:767px){
 
     /*-------INDEX-------*/
- 
+
 
     /*-------HTML CABAÑAS + BUNGALOWS + CASAS*/
     .icons{
@@ -23,7 +23,7 @@
     .max{  
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content:space-around;
         padding: 0;
         overflow-x: hidden;
         .contenedor{
@@ -192,7 +192,7 @@
         display: flex;
         flex-direction: row;
         margin: auto;
-        justify-content: space-evenly; 
+        justify-content: space-evenly-; 
         max-width: 100%;
         .contenedor{
             width: 450px;
