--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -20,12 +20,36 @@
     }
         
     /*------HTML EXCURSIONES------*/
+    .presentation{
+        align-items: center;
+        justify-content: center;
+        text-align:center ;
+        h1{
+            font-size: 70px!important;
+            width: 100%;
+            text-align: center!important;
+            top: 30%;
+        }
+        h2{
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 38%;
+            font-size: 40px;
+        }
+        .carousel-inner{
+            height: 50vh;
+        }
+
+    }
+
     .max{  
         display: flex;
         flex-direction: row;
         justify-content:space-around;
         padding: 0;
         overflow-x: hidden;
+        max-width: 100%;
         .contenedor{
             background-color: lightgray;
             width: 250px;
@@ -33,6 +57,7 @@
             border-radius: 10px;
             margin-bottom: 20px;
             position: relative;
+            flex-wrap: wrap;
     
             img{
                 width: 250px;
@@ -43,24 +68,28 @@
             }
             h2{
                 font-family: $mainFont;
-                font-size: 22px;
+                font-size: 20px;
                 font-weight: $mainWeight;
-                // margin-top: 5px;
                 position: absolute;
                 bottom:12%;
-                left: 10px;
+                left: 5px;
                 color: white;
                 text-shadow: 1px 1px 2px black
+            }
+            .minih2{
+                font-size: 18px!important;
             }
             h3{
                 bottom: 20%;
                 position: absolute;
-                left:10px;
+                left:5px;
                 color:white;
                 font-family: $mainFont;
                 text-shadow: 1px 1px 2px black;
-                font-size: 18px!important;
-                
+                font-size: 16px!important;
+            }
+            .minih3{
+                bottom: 25%;
             }
             .modal{
                 top: 20% !important;
@@ -188,6 +217,30 @@
     }
 
     /*-------HTML ACTIVITIES------*/
+    .presentation{
+        align-items: center;
+        justify-content: center;
+        text-align:center ;
+        .carousel-inner{
+            height: 80vh;
+            img{
+                height: 80vh;
+            }
+        }
+        h1{
+            font-size: 80px!important;
+            width: 100%;
+            text-align: center!important;
+            top: 35%;
+        }
+        h2{
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            top: 48%;
+            font-size: 45px;
+        }
+    }
     .max{
         display: flex;
         flex-direction: row;
@@ -207,6 +260,7 @@
                 bottom:12%;
                 font-size: 24px;
                 font-family: $mainFont;
+                left: 10px;
             }
             h3{
                 bottom: 18%;
