--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -6,7 +6,8 @@
     /*-------INDEX-------*/
 
 
-    /*-------HTML CABAÑAS + BUNGALOWS + CASAS*/
+    /*-------HTML UNITS------*/
+
     .icons{
         display: flex;
         flex-direction: row;
@@ -17,6 +18,71 @@
         flex-direction: row;
         justify-content: center;
         margin-left: 5%
+    }
+    .contUnits{
+        max-width: 100%!important;
+        padding: 0;
+        height: 60vh!important;
+        .bgUnits{
+            height: 60vh;
+            background-image: url("/images/Bgunits.jpg");
+            object-fit: cover;
+            background-position: center;
+            background-repeat: no-repeat;           
+        }
+        .img-fluid{
+            height: 60vh;
+            object-fit: cover;
+        }
+        h1{
+            position: absolute;
+            top: 15%;
+            color: white;
+            text-shadow: 1px 2px 2px black;
+            font-size: 70px!important;
+            width: 100%!important;
+
+        }
+        p{
+            position: absolute;
+            top: 35%;
+            font-size:22px;
+            width: 100%;
+            color:white;
+            font-weight: 600;
+            text-shadow: 1px 2px 2px black;
+    
+        }
+    }
+    .titlesUnits{
+        h2{
+            font-size: 40px;
+            font-weight: $mainWeight;
+            margin-top: 15px;
+        }
+    }
+    
+    .unitsMain{
+        h2{
+            font-size: 40px;
+            font-weight: $mainWeight;
+        }
+    }
+    
+    .card{
+        .card-title, .card-header{
+            font-weight:$mainWeight;
+        }
+        img{
+            object-fit: cover;
+        }
+    }
+    
+    .carrousel2{
+        height: 300px;
+        img{
+            height: 300px;
+        }
     }
         
     /*------HTML EXCURSIONES------*/
@@ -78,6 +144,7 @@
             }
             .minih2{
                 font-size: 18px!important;
+                
             }
             h3{
                 bottom: 20%;
@@ -157,6 +224,71 @@
     }
 
                 /*HTML UNITS*/
+        .row{
+            flex-wrap: nowrap;
+        }
+        .contUnits{
+            max-width: 100%!important;
+            padding: 0;
+            height: 80vh!important;
+            .bgUnits{
+                height: 80vh;
+                background-image: url("/images/bgUnitsDesk.jpg");
+                object-fit: cover;
+                background-position: top;
+                background-repeat: no-repeat;
+            }
+            .img-fluid{
+                height: 80vh;
+                object-fit: cover;
+            }
+            h1{
+                position: absolute;
+                top: 15%;
+                color: white;
+                text-shadow: 1px 2px 2px black;
+                font-size: 100px!important;
+            }
+            p{
+                position: absolute;
+                top: 40%;
+                font-size:25px;        
+                text-align: center!important;
+                max-width: 80%;
+                margin-left: 10%;
+                color: white;
+                font-weight: 300;
+                text-shadow: 1px 2px 2px black;
+        
+            }
+        }
+        .titlesUnits{
+            h2{
+                font-size: 40px;
+                font-weight: $mainWeight;
+                margin-top: 15px;
+            }
+        }
+        
+        .unitsMain{
+            h2{
+                font-size: 40px;
+                font-weight: $mainWeight;
+            }
+        }
+        
+        .card{
+            .card-title, .card-header{
+                font-weight:$mainWeight;
+            }
+        }
+        
+        .carrousel2{
+            height: 300px;
+            img{
+                height: 300px;
+            }
+        }
 
     #carrouselCardis{
         width: 650px;
@@ -268,7 +400,13 @@
                 left:10px;
                 color:white;
                 font-family: $mainFont;
-                text-shadow: 1px 1px 2px black
+                text-shadow: 1px 1px 2px black;
+            }
+            .minih2{
+                font-size: 24px!important;
+            }
+            .minih3{
+                bottom: 18%;
             }
             button{
                 padding: 4px!important;
