--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,3 +1,11 @@
+h1{
+    font-size: 60px!important;
+}
+
+#h2{
+    font-size: 40px!important;
+    font-weight: 300;
+}
 
 #carrouselCard{
     height: 400px;
@@ -18,7 +26,7 @@ button{
     display: flex;
     justify-content: center;
     .btn{
-        width: 30%;
+        width: 80%;
         height: 40px;
         display: flex;
         flex-direction: column;
@@ -334,5 +342,58 @@ h3{
             margin-top: 5px;
          }
     }
-}
+}    
+
+    /*------------HTML UBICACION-------*/
+    .contUbi{
+        max-width: 100%!important;
+        padding: 0;
+        height: 80vh;
+        .bgUbi{
+            width: 100%;
+            height: 80vh;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+        }
+        img{
+            max-width: 100%!important;
+            height: 80vh!important;
+            padding: 0;
+            object-fit: cover;
+        }
+        h1{
+            position: absolute;
+            font-size: 50px!important;
+            top: 30%;
+            color: white;
+            text-shadow: 2px 2px 2px black;
+            text-align: center;
+        }
+        p{
+            position: absolute;
+            font-size: 16px;
+            top: 50%;
+            color: white;
+            text-align: center;
+            text-shadow: 2px 2px 2px black;
+        }
+    }
+
+    #h2Ubi{
+        font-size: 38px!important;
+        font-weight: $mainWeight;
+    }
+    #ubiTitle{
+        font-size:28px!important;
+        margin-bottom: 20px;
+    }
+    #pUbi{
+        font-size: 16px;
+        font-weight: $mainWeight;
+    }
+
+
 
