--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -4,8 +4,22 @@
 @media (min-width:767px){
 
     /*-------INDEX-------*/
-
-
+    #h2{
+        font-weight: 600;
+    }
+    #btnunits{
+        width:100%;
+        display: flex;
+        justify-content: center;
+        .btn{
+            width: 40%;
+            height: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-family: $mainFont;
+        }
+    }
     /*-------HTML UNITS------*/
 
     .icons{
@@ -28,7 +42,7 @@
             background-image: url("/images/Bgunits.jpg");
             object-fit: cover;
             background-position: center;
-            background-repeat: no-repeat;           
+            background-repeat: no-repeat;
         }
         .img-fluid{
             height: 60vh;
@@ -51,7 +65,7 @@
             color:white;
             font-weight: 600;
             text-shadow: 1px 2px 2px black;
-    
+
         }
     }
     .titlesUnits{
@@ -61,14 +75,14 @@
             margin-top: 15px;
         }
     }
-    
+
     .unitsMain{
         h2{
             font-size: 40px;
             font-weight: $mainWeight;
         }
     }
-    
+
     .card{
         .card-title, .card-header{
             font-weight:$mainWeight;
@@ -77,14 +91,14 @@
             object-fit: cover;
         }
     }
-    
+
     .carrousel2{
         height: 300px;
         img{
             height: 300px;
         }
     }
-        
+
     /*------HTML EXCURSIONES------*/
     .presentation{
         align-items: center;
@@ -109,7 +123,7 @@
 
     }
 
-    .max{  
+    .max{
         display: flex;
         flex-direction: row;
         justify-content:space-around;
@@ -124,7 +138,7 @@
             margin-bottom: 20px;
             position: relative;
             flex-wrap: wrap;
-    
+
             img{
                 width: 250px;
                 height: 330px;
@@ -144,7 +158,7 @@
             }
             .minih2{
                 font-size: 18px!important;
-                
+
             }
             h3{
                 bottom: 20%;
@@ -169,13 +183,55 @@
         }
     }
 
+/*----------HTML UBICACION------*/
+.containerUbi{
+    max-width: 90%;
+}
+.contUbi{
+    max-width: 100%!important;
+    padding: 0;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    h1{
+        position: absolute;
+        font-size: 75px!important;
+        top: 30%;
+        color: white;
+        text-shadow: 2px 2px 2px black;
+        text-align: center;
+    }
+    p{
+        position: absolute;
+        font-size: 25px;
+        top: 45%;
+        color: white;
+        text-align: center;
+        text-shadow: 2px 2px 2px black;
+    }
+}
+
+#h2Ubi{
+    font-size: 50px!important;
+    font-weight: $mainWeight;
+    margin-bottom: 20px;
+}
+#ubiTitle{
+    font-size:38px!important;
+    margin-bottom: 20px;
+}
+#pUbi{
+    font-size: 20px;
+    font-weight: $mainWeight;
+}
+
 
 }
 
 
 @media (min-width:1023px) {
 
-    
+
 
     #carousel-inner{
         height: 80vh;
@@ -184,18 +240,18 @@
         height: 80vh;
         object-fit: cover!important;
         object-position: 50% 50%
-    
+
     }
     #carrouselCard{
         object-fit: cover;
-    }  
+    }
 
     #h22{
         padding-top: 50px !important;
-        padding-bottom: 50px !important; 
+        padding-bottom: 50px !important;
     }
-    #h2ex{
-        padding-top: 100px!important;        
+    #h2{
+        font-weight: 300;
     }
     #h4{
         width: 70%;
@@ -219,12 +275,35 @@
     #cardEx{
         height: 600px;
     }
+    #btnunits{
+        width:100%;
+        display: flex;
+        justify-content: center;
+        .btn{
+            width: 20%;
+            height: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            font-family: $mainFont;
+            font-size: 20px;
+            margin-bottom: 20px;
+            color: white;
+            background-color: #6c757d;
+            &:hover{
+                color: #6c757d;
+                background-color: white;
+                border-color: #6c757d;
+            }
+    
+        }
+    }
     #iconsFt{
         margin-top: 0!important;
     }
 
                 /*HTML UNITS*/
-        .row{
+        .rowU{
             flex-wrap: nowrap;
         }
         .contUnits{
@@ -252,14 +331,14 @@
             p{
                 position: absolute;
                 top: 40%;
-                font-size:25px;        
+                font-size:25px;
                 text-align: center!important;
                 max-width: 80%;
                 margin-left: 10%;
                 color: white;
                 font-weight: 300;
                 text-shadow: 1px 2px 2px black;
-        
+
             }
         }
         .titlesUnits{
@@ -269,20 +348,20 @@
                 margin-top: 15px;
             }
         }
-        
+
         .unitsMain{
             h2{
                 font-size: 40px;
                 font-weight: $mainWeight;
             }
         }
-        
+
         .card{
             .card-title, .card-header{
                 font-weight:$mainWeight;
             }
         }
-        
+
         .carrousel2{
             height: 300px;
             img{
@@ -294,7 +373,7 @@
         width: 650px;
         margin-left: auto;
         object-fit: cover;
-       
+
     }
 
     #carrouselCardis2{
@@ -317,7 +396,7 @@
         display: flex;
         justify-content: space-around;
         img{
-            margin-bottom: 25px!important;            
+            margin-bottom: 25px!important;
             }
     }
     .p{
@@ -328,7 +407,7 @@
     .colum{
         display: flex;
         flex-direction: column;
-        
+
     }
     .services{
         display: flex!important;
@@ -345,7 +424,7 @@
             width: 100%;
             text-align: left;
         }
-    
+
     }
 
     /*-------HTML ACTIVITIES------*/
@@ -377,7 +456,7 @@
         display: flex;
         flex-direction: row;
         margin: auto;
-        justify-content: space-evenly-; 
+        justify-content: space-evenly-;
         max-width: 100%;
         .contenedor{
             width: 450px;
@@ -447,8 +526,52 @@
                 width: auto;
                 margin-top: 5px;
             }
-        
-        }      
+
+        }
     }
+
+    /*----------HTML UBICACION------*/
+.containerUbi{
+    max-width: 86%;
+}
+.contUbi{
+    max-width: 100%!important;
+    padding: 0;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    h1{
+        position: absolute;
+        font-size: 90px!important;
+        top: 30%;
+        color: white;
+        text-shadow: 2px 2px 2px black;
+        text-align: center;
+    }
+    p{
+        position: absolute;
+        font-size: 28px;
+        top: 45%;
+        color: white;
+        text-align: center;
+        text-shadow: 3px 3px 3px black;
+    }
+}
+
+#h2Ubi{
+    font-size: 50px!important;
+    font-weight: $mainWeight;
+    margin-bottom: 30px!important;
+    margin-top: 30px!important;
+}
+#ubiTitle{
+    font-size:32px!important;
+    
+}
+#pUbi{
+    font-size: 18px;
+    font-weight: $mainWeight;
+    padding: 39px!important;
+}
 
 }
