--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,10 +1,11 @@
 h1{
     font-size: 60px!important;
+    font-weight: $mainWeight;
 }
 
 #h2{
     font-size: 40px!important;
-    font-weight: 300;
+    
 }
 
 #carrouselCard{
@@ -69,6 +70,7 @@ button{
     text-align: center;
     align-items: center;
     margin-left: 5%;
+    font-weight: $mainWeight;
 }
 
 #card{
@@ -394,6 +396,31 @@ h3{
         font-size: 16px;
         font-weight: $mainWeight;
     }
+
+/*--------------HTML CONTACTO----------*/
+.xlContacto{
+    max-width: 100%;
+    height: 80vh;
+    padding: 0;
+    .contContact{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 100%;
+            height: 80vh;
+            object-fit: cover;
+        }
+        h1{
+            position: absolute;
+            top: 30%;
+            color: white;
+            font-size: 100px!important;
+            text-shadow: 2px 2px 2px black;
+        }
+    }
+}
 
 
 
