--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -4,6 +4,10 @@
 @media (min-width:767px){
 
     /*-------INDEX-------*/
+    .container-xl{
+        max-width: 90%!important;
+    }
+
     #h2{
         font-weight: 600;
     }
@@ -251,7 +255,7 @@
         padding-bottom: 50px !important;
     }
     #h2{
-        font-weight: 300;
+        font-weight: $mainWeight;
     }
     #h4{
         width: 70%;
@@ -280,7 +284,7 @@
         display: flex;
         justify-content: center;
         .btn{
-            width: 20%;
+            width: 25%;
             height: 40px;
             display: flex;
             flex-direction: column;
