--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,10 +1,13 @@
-h1{
+
+#h1{
     font-size: 60px!important;
     font-weight: $mainWeight;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.315);
 }
 
 #h2{
     font-size: 40px!important;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.315);
     
 }
 
@@ -37,6 +40,7 @@ button{
         margin-bottom: 20px;
         color: white;
         background-color: #6c757d;
+        box-shadow:2px 2px 2px #00000070;
         &:hover{
             color: #6c757d;
             background-color: white;
@@ -229,7 +233,7 @@ h3{
         width: 100%;
         text-align: center;
         position: absolute;
-        top: 55%;
+        top: 65%;
         font-size: 25px;
         color: white;
         text-shadow: 1px 1px 2px black;
@@ -240,7 +244,7 @@ h3{
 
 .container-xxl{
     max-width: 100%;
-    h1{
+    .titleaActiv{
         font-weight: $mainWeight;
         font-size: 42px!important;
     }
@@ -412,15 +416,36 @@ h3{
             height: 80vh;
             object-fit: cover;
         }
-        h1{
+        .titleContact{
             position: absolute;
             top: 30%;
             color: white;
-            font-size: 100px!important;
+            font-size: 70px;
             text-shadow: 2px 2px 2px black;
+        }
+        p{
+            position: absolute;
+            color: white;
+            text-shadow: 2px 2px 2px black;
+            font-size: 20px;
+            text-align: center;
+            width: 80%;
+            top: 48%;
         }
     }
 }
+.xlBodyContact{
+    margin-top: 30px;
+    #h2Contact{
+        font-size: 30px!important;
+        font-weight: 300;
+        color: black;
+        width: 95%;
+        font-family: 'Cormorant Garamond', serif;
+
+    }
+}
+
 
 
 
