--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -136,15 +136,15 @@
         max-width: 100%;
         .contenedor{
             background-color: lightgray;
-            width: 250px;
+            width: 220px;
             height: 380px;
             border-radius: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             position: relative;
             flex-wrap: wrap;
 
             img{
-                width: 250px;
+                width: 220px;
                 height: 330px;
                 object-fit: cover;
                 border-top-left-radius: 10px;
@@ -228,6 +228,51 @@
     font-size: 20px;
     font-weight: $mainWeight;
 }
+/*--------------HTML CONTACTO----------*/
+
+.contContact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    img{
+        width: 100%;
+        height: 50vh;
+        object-fit: cover;
+    }
+    .titleContact{
+        position: absolute;
+        top: 30%;
+        color: white;
+        font-size: 100px!important;
+        text-shadow: 2px 2px 2px black;
+
+    }
+    p{
+        position: absolute;
+        color: white;
+        text-shadow: 2px 2px 2px black;
+        font-size: 20px;
+        text-align: center;
+        width: 80%;
+        top: 48%;
+    }
+}
+
+.xlBodyContact{
+    margin-top: 30px;
+    #h2Contact{
+        font-size: 30px!important;
+        font-weight: 300;
+        color: black;
+        width: 95%;
+        font-family: 'Cormorant Garamond', serif;
+        font-weight: $mainWeight;
+
+
+    }
+}
+
 
 
 }
@@ -577,5 +622,35 @@
     font-weight: $mainWeight;
     padding: 39px!important;
 }
+    /*-------HTML CONTACT------*/
+    .contContact{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 100%;
+            height: 50vh;
+            object-fit: cover;
+        }
+        .titleContact{
+            position: absolute;
+            top: 30%;
+            color: white;
+            font-size: 100px!important;
+            text-shadow: 2px 2px 2px black;
+    
+        }
+        p{
+            position: absolute;
+            color: white;
+            text-shadow: 2px 2px 2px black;
+            font-size: 28px!important;
+            text-align: center;
+            width: 80%;
+            top: 48%;
+        }
+    }
+
 
 }
