--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -102,7 +102,7 @@ button{
     height: 80vh!important;
     .bgUnits{
         height: 80vh;
-        background-image: url("images/Bgunits.jpg");
+        background-image: url("/images/Bgunits.jpg");
         object-fit: cover;
         background-position: center;
         background-repeat: no-repeat;
