--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -43,7 +43,7 @@
         height: 60vh!important;
         .bgUnits{
             height: 60vh ;
-            background-image: url("images/Bgunits.jpg");
+            background-image: url("../images/Bgunits.jpg");
             object-fit: cover;
             background-position: center;
             background-repeat: no-repeat;
