--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -361,7 +361,7 @@
             height: 80vh!important;
             .bgUnits{
                 height: 80vh;
-                background-image: url("/images/bgUnitsDesk.jpg");
+                background-image: url("../images/bgUnitsDesk.jpg");
                 object-fit: cover;
                 background-position: top;
                 background-repeat: no-repeat;
