fix bg img units

--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -54,7 +54,7 @@ button{
     margin: auto;
     font-size: 18px;
     font-weight: $mainWeight;
-    color: gray;
+    color: rgb(65, 63, 63);
 }
 
 #cardEx{
