--- a/scss/partials/_mediaqueries.scss
+++ b/scss/partials/_mediaqueries.scss
@@ -24,6 +24,9 @@
             font-family: $mainFont;
         }
     }
+    .space{
+        margin-bottom: 0px!important;
+    }
     /*-------HTML UNITS------*/
 
     .icons{
@@ -347,6 +350,10 @@
     
         }
     }
+    .space{
+        margin-bottom: 0px!important;
+    }
+
     #iconsFt{
         margin-top: 0!important;
     }
